No need to hide network states if preload = none

We hide some network state changes when loading cross-origin videos.
The idea is that non-videos will look exactly like non-existing resources.
However, if preload=none, no loading is actually occuring, so there is
no reason to hide the preload state. Also, since the player will not
naturally progress to an error or "have metadata" stage, it will be
stuck loading without this patch.

Bug: 852119
Change-Id: I660b6167e1783dae79c90aa5479c504f9d302a6b
Reviewed-on: https://chromium-review.googlesource.com/1149143
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580594}
Former-commit-id: 1b9596a2788c687bca11150bd7f0ae5094ecd1ff